<resources>
    <string name="app_name">Enebla</string>
    <string name="restaurant">Restaurant</string>
    <string name="friends">Friends</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="placeHolder_small">Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi.</string>
    <string name="placeHolder">Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien.</string>
    <string name="placeHolderMain">Blazing-ly Fast</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Login</string>
    <string name="register">Register</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="_251">+251</string>
    <string name="_123_456_789">123–456–789</string>
    <string name="terms_link_text"><u>terms and agreement.</u></string>
    <string name="i_have_read_and_agree_to_enebla_s">I have read and agree to enebla\'s</string>
    <string name="next">Next</string>
    <string name="otp_check_sms">We have sent a confirmation code via sms to the phone number you provided.</string>
    <string name="verify">Verify</string>
    <string name="enter_code">Enter code</string>
    <string name="conformation">Conformation</string>
    <string name="create_your_account">Create your account</string>
    <string name="first_name">First Name*</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="middle_name">Middle Name*</string>
    <string name="enter_middle_name">Enter Middle Name</string>
    <string name="last_name">Last Name*</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="gender">Gender*</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="password">Password*</string>
    <string name="your_password">Your Password</string>
    <string name="confirm_password">Confirm password*</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="email">Email*</string>
    <string name="enter_email">Enter Email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="settings">Settings</string>
    <string name="john_doe">John doe</string>
    <string name="abebe_bikila">Abebe Bikila</string>
    <string name="flag">flag</string>
    <string name="line">Line</string>
    <string name="logo">logo</string>
    <string name="edit">edit</string>
    <string name="map">map</string>
    <string name="phone_number">Phone No.</string>
    <string name="username">Username*</string>
    <string name="enter_username">Enter Username</string>
    <string name="logout">Logout</string>
    <string name="dots">........</string>
</resources>