<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oxford_blue"
    tools:context=".logIn.LogIn">

    <TextView
        android:id="@+id/textView1_in_ln"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/log_in"
        android:textColor="@color/platinum"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/textView2_in_ln"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="12dp"
        android:text="@string/placeHolder_small"
        android:textAlignment="center"
        android:textColor="@color/platinum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1_in_ln" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2_in_ln"
        app:layout_constraintVertical_bias="0.041">
        <TextView
            android:id="@+id/tv3_in_li"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_weight="1"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/email"
            android:textColor="@color/platinum"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/e_input_in_li"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_weight="1"
            android:background="@drawable/input_field"
            android:elevation="5sp"
            android:hint="@string/enter_email"
            android:paddingHorizontal="20sp"
            android:paddingVertical="10sp"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"/>
        <TextView
            android:id="@+id/tv7_in_li"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/password"
            android:textColor="@color/platinum"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/p_input_in_li"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_weight="1"
            android:background="@drawable/input_field"
            android:elevation="5sp"
            android:hint="@string/your_password"
            android:paddingHorizontal="20sp"
            android:paddingVertical="10sp"
            android:textSize="16sp"
            android:autofillHints="password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/register_button_in_li"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_marginStart="12dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/register"
            android:textColor="@color/orange_web"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/term_agreement"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23" />

        <ImageView
            android:layout_width="2sp"
            android:layout_height="30sp"
            android:layout_marginVertical="8sp"
            android:src="@drawable/signup_vertical_line"
            android:contentDescription="@string/line"/>

        <TextView
            android:id="@+id/forgot_password_in_li"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/forgot_password"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/term_agreement"
            app:layout_constraintTop_toBottomOf="@+id/signup_terms0" />
    </LinearLayout>

    <Button
        android:id="@+id/li_button_in_li"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button_main"
        android:fontFamily="@font/inter_semibold"
        android:paddingHorizontal="40sp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/platinum"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.205" />
</androidx.constraintlayout.widget.ConstraintLayout>