<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_signup.SignUp"
    android:background="@color/oxford_blue">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
<!--        TODO: change EDITTEXT to  TextInputEditText-->
<!--        TODO: add confirm password-->
        <TextView
            android:layout_marginTop="20sp"
            android:id="@+id/textView1_in_ca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/create_your_account"
            android:textColor="@color/platinum"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.046" />

        <TextView
            android:id="@+id/textView2_in_ca"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50sp"
            android:layout_marginTop="12dp"
            android:text="@string/placeHolder_small"
            android:textAlignment="center"
            android:textColor="@color/platinum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1_in_ca" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:orientation="vertical"
            android:weightSum="12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2_in_ca"
            app:layout_constraintVertical_bias="0.041">

            <TextView
                android:id="@+id/tv3_in_ca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/username"
                android:textColor="@color/platinum"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/un_input_in_ca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_weight="1"
                android:background="@drawable/input_field"
                android:elevation="5sp"
                android:hint="@string/enter_username"
                android:paddingHorizontal="20sp"
                android:paddingVertical="10sp"
                android:textSize="16sp"
                android:inputType="textPersonName"
                android:autofillHints="name"/>
            <TextView
                android:id="@+id/tv6_in_ca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/email"
                android:textColor="@color/platinum"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/e_input_in_ca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_weight="1"
                android:background="@drawable/input_field"
                android:elevation="5sp"
                android:hint="@string/enter_email"
                android:paddingHorizontal="20sp"
                android:paddingVertical="10sp"
                android:textSize="16sp"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"/>
            <TextView
                android:id="@+id/tv7_in_ca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/password"
                android:textColor="@color/platinum"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/p_input_in_ca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_weight="1"
                android:background="@drawable/input_field"
                android:elevation="5sp"
                android:hint="@string/your_password"
                android:paddingHorizontal="20sp"
                android:paddingVertical="10sp"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:autofillHints="password"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="350sp"
            android:layout_height="45sp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <CheckBox
                android:id="@+id/term_agreement"
                style="@style/CustomCheckbox02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.476" />

            <TextView
                android:id="@+id/signup_terms0"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/i_have_read_and_agree_to_enebla_s"
                android:textColor="@color/platinum"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/term_agreement"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.23" />

            <TextView
                android:id="@+id/signup_terms"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="100sp"
                android:clickable="true"
                android:text="@string/terms_link_text"
                android:textColor="@color/teal_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/term_agreement"
                app:layout_constraintTop_toBottomOf="@+id/signup_terms0"
                android:focusable="true" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_marginTop="28dp"
            android:indeterminateTint="@color/platinum"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.787"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <Button
            android:id="@+id/su_ca_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_main"
            android:fontFamily="@font/inter_medium"
            android:layout_marginHorizontal="20sp"
            android:layout_marginVertical="30sp"
            android:paddingHorizontal="40sp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.943"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="0.205" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>