<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/oxford_blue">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginEnd="223dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toStartOf="@+id/setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo"/>
    <ImageButton
        android:id="@+id/setting"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:scaleY="2.5"
        android:scaleX="2.5"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/settings"
        android:focusable="true"
        android:src="@drawable/ic_setting"
        android:background="@color/oxford_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="250sp"
        android:layout_height="250sp"
        android:layout_margin="20sp"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:contentDescription="@string/profile" />

    <ProgressBar
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture"
        android:indeterminateTint="@color/platinum"
        android:id="@+id/progress_profile"

        />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/abebe_bikila"
        android:textColor="@color/platinum"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>