<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUp.OTP"
    android:background="@color/oxford_blue">
    <TextView
        android:id="@+id/textView_in_con"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/conformation"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <TextView
        android:id="@+id/textView2_in_con"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="25sp"
        android:text="@string/otp_check_sms"
        android:textAlignment="center"
        android:textColor="@color/platinum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_in_con" />
    <com.noobcode.otpview.OTPView
        android:id="@+id/otp_input_signup"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="25sp"
        android:textColor="@color/platinum"
        app:borderThickness="5"
        app:otpLength="6"
        app:spaceBetween="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2_in_con"
        app:layout_constraintVertical_bias="0.066" />

    <ProgressBar
        android:id="@+id/progress_bar_otp"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginTop="64dp"
        android:indeterminateTint="@color/platinum"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp_input_signup" />

    <Button
        android:layout_marginEnd="20sp"
        android:id="@+id/su_otp_verify_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_main"
        android:enabled="false"
        android:fontFamily="@font/inter_medium"
        android:paddingHorizontal="40sp"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp_input_signup" />
</androidx.constraintlayout.widget.ConstraintLayout>